<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SphinxRecorderActivity"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:orientation="vertical"
            android:onClick="onSearchType"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:id="@+id/model_name_header"
                style="@style/InputHeaderTextViewStyle"
                android:text="@string/model_name_header_text" />

            <TextView
                android:id="@+id/model_name"
                style="@style/InputTextViewStyle"
                android:text="@string/txt_placeholder" />

        </LinearLayout>

        <!-- divider line -->
        <ImageView
            android:id="@+id/divider1"
            app:layout_constraintStart_toStartOf="@id/model"
            app:layout_constraintTop_toBottomOf="@id/model"
            style="@style/DividerLineStyle" />

        <Switch
            android:id="@+id/writeFileSwitch"
            android:text="@string/write_file_switch"
            app:layout_constraintStart_toStartOf="@id/divider1"
            app:layout_constraintTop_toBottomOf="@id/divider1"
            style="@style/SwitchStyle" />

        <!-- divider line -->
        <ImageView
            android:id="@+id/divider2"
            app:layout_constraintStart_toStartOf="@id/writeFileSwitch"
            app:layout_constraintTop_toBottomOf="@id/writeFileSwitch"
            style="@style/DividerLineStyle" />

        <Switch
            android:id="@+id/backgroundRunSwitch"
            android:text="@string/background_run_switch"
            app:layout_constraintStart_toStartOf="@id/divider2"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            style="@style/SwitchStyle" />

        <!-- divider line -->
        <ImageView
            android:id="@+id/divider3"
            app:layout_constraintStart_toStartOf="@id/backgroundRunSwitch"
            app:layout_constraintTop_toBottomOf="@id/backgroundRunSwitch"
            style="@style/DividerLineStyle" />

        <Switch
            android:id="@+id/startSwitch"
            android:text="@string/start_switch"
            app:layout_constraintStart_toStartOf="@id/divider3"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            style="@style/SwitchStyle" />

        <!-- divider line -->
        <ImageView
            android:id="@+id/divider4"
            app:layout_constraintStart_toStartOf="@id/startSwitch"
            app:layout_constraintTop_toBottomOf="@id/startSwitch"
            style="@style/DividerLineStyle" />

        <LinearLayout
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginStart="@dimen/margin_left"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/divider4"
            app:layout_constraintTop_toBottomOf="@id/divider4">

            <TextView
                android:id="@+id/caption_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:typeface="sans"
                android:text="@string/place_holder_string"/>

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/place_holder_string"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
